fix: remove problematic GitHub comment step in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -157,94 +157,7 @@ jobs:
           echo "   SHA256: $SHA256"
           echo "   URL: https://github.com/${{ github.repository }}/archive/refs/tags/${VERSION}.tar.gz"
           echo ""
-          echo "📋 请手动更新 homebrew-tap 仓库，或等待后续自动化实现"
-
-      - name: Post Homebrew update instructions
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const version = '${{ steps.get_version.outputs.VERSION }}';
-            const sha256 = '${{ steps.sha256.outputs.sha256 }}';
-            
-            // 查找刚创建的 release
-            const releases = await github.rest.repos.listReleases({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              per_page: 1
-            });
-            
-            if (releases.data.length === 0) {
-              console.log('No release found');
-              return;
-            }
-            
-            const releaseId = releases.data[0].id;
-            
-            const body = `## 🍺 Homebrew Formula 更新信息
-
-            > 💡 **提示**: 如果您有 homebrew-tap 仓库，请更新 Formula 文件
-
-            ### 更新内容
-
-            \`\`\`ruby
-            class SqlDiff < Formula
-              desc "智能 SQL 表结构比对工具，支持交互式多行输入和 AI 分析"
-              homepage "https://bacchusgift.github.io/sql-diff/"
-              url "https://github.com/${{ github.repository }}/archive/refs/tags/${version}.tar.gz"
-              sha256 "${sha256}"
-              license "MIT"
-              
-              depends_on "go" => :build
-
-              def install
-                ldflags = %W[
-                  -s -w
-                  -X main.Version=#{version}
-                  -X main.BuildTime=#{time.iso8601}
-                  -X main.GitCommit=#{Utils.git_short_head}
-                ]
-
-                system "go", "build", *std_go_args(ldflags: ldflags), "./cmd/sql-diff"
-                generate_completions_from_executable(bin/"sql-diff", "completion")
-              end
-
-              test do
-                assert_match version.to_s, shell_output("#{bin}/sql-diff --version")
-              end
-            end
-            \`\`\`
-
-            ### 快速更新命令
-
-            \`\`\`bash
-            # 1. 克隆或进入 homebrew-tap 仓库
-            git clone https://github.com/Bacchusgift/homebrew-tap.git
-            cd homebrew-tap
-
-            # 2. 编辑 Formula/sql-diff.rb
-            # 更新 url 和 sha256 字段
-
-            # 3. 提交并推送
-            git add Formula/sql-diff.rb
-            git commit -m "chore: update sql-diff to ${version}"
-            git push origin main
-            \`\`\`
-
-            ### 验证更新
-
-            \`\`\`bash
-            brew update
-            brew upgrade sql-diff
-            sql-diff --version  # 应该显示 ${version}
-            \`\`\`
-            `;
-
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: releaseId,
-              body: body
-            });
+          echo "✅ Homebrew Tap 将在下一步自动更新"
 
   # 🚀 第三步：自动更新 Homebrew Tap
   update-homebrew:
