--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -191,12 +191,17 @@ jobs:
             depends_on "go" => :build
 
             def install
+              # 构建标志
               ldflags = %W[
                 -s -w
                 -X main.Version=#{version}
                 -X main.BuildTime=#{time.iso8601}
-                -X main.GitCommit=#{Utils.git_short_head}
               ]
+              
+              # 仅在 HEAD 版本（从 Git 安装）时添加 GitCommit
+              if build.head?
+                ldflags << "-X main.GitCommit=#{Utils.git_short_head}"
+              end
 
               system "go", "build", *std_go_args(ldflags: ldflags), "./cmd/sql-diff"
               generate_completions_from_executable(bin/"sql-diff", "completion")
