chore: 移除内部开发文档并更新 .gitignore
- 从 Git 追踪中移除 .AI_SQL_GENERATION_DOC.md
- 在 .gitignore 中添加内部开发文档规则：
  - .AI_*/ 目录
  - *.draft.md 和 *.internal.md 文件
- 添加清理脚本 scripts/cleanup-internal-docs.sh

这些内部文档仅用于开发过程，不应对外开源。

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,13 @@ config.yaml
 node_modules/
 .vitepress/cache
 .vitepress/dist
+
+# Internal development docs (should not be public)
+.AI_SQL/
+.AI_SQL_ENHANCED/
+.AI_MIGRATION/
+.AI_INTERACTIVE/
+.AI_CONFIG/
+.AI_*/
+*.draft.md
+*.internal.md
