chore: 删除 Formula 目录并添加 Git 历史清理脚本
- 删除 Formula/ 目录（已迁移到独立的 homebrew-tap 仓库）
- 添加 scripts/clean-git-history.sh 清理脚本
- 更新 .gitignore 规则

Homebrew Formula 现在通过 GitHub Actions 自动更新到：
https://github.com/Bacchusgift/homebrew-tap

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ node_modules/
 .vitepress/dist
 
 # Internal development docs (should not be public)
+.internal_docs/
 .AI_SQL/
 .AI_SQL_ENHANCED/
 .AI_MIGRATION/
